src/compiler/snapshots/isa__compiler__lexer__tests__calls.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"Some x\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: Ident(
                "Some",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "x",
            ),
            span: SpanData { file_id: 0, lo: 5, hi: 6 },
        },
    ),
]
