src/compiler/snapshots/isa__compiler__lexer__tests__char_errors-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'λ'\").next()"
---
Some(
    Err(
        Spand {
            data: InvalidChar(
                'λ',
            ),
            span: SpanData { file_id: 0, start: 0, end: 2 },
        },
    ),
)
