src/compiler/snapshots/isa__compiler__lexer__tests__char_errors-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'aa'\").next()"
---
Some(
    Err(
        Spand {
            data: UnterminatedChar,
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
)
