src/compiler/snapshots/isa__compiler__lexer__tests__char_errors.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"''\").next()"
---
Some(
    Err(
        Spand {
            data: EmptyChar,
            span: SpanData { file_id: 0, start: 0, end: 2 },
        },
    ),
)
