src/compiler/snapshots/isa__compiler__lexer__tests__chars-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'\\t'\").next()"
---
Some(
    Ok(
        Spand {
            data: Char(
                9,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
)
