src/compiler/snapshots/isa__compiler__lexer__tests__chars-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'\\r'\").next()"
---
Some(
    Ok(
        Spand {
            data: Char(
                13,
            ),
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
