src/compiler/snapshots/isa__compiler__lexer__tests__chars-6.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'\\''\").next()"
---
Some(
    Ok(
        Spand {
            data: Char(
                39,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
)
